# AskPG

./: .env.example  .gitignore  README.md  index.ts  main.ipynb  pyproject.toml
bot/: README.md  main.py  model.py  pyproject.toml
chroma_langchain_db/: chroma.sqlite3
chroma_langchain_db/2e82ad61-3f2d-48c8-8536-74c9d92346bb/: index_metadata.pickle
data/: links.txt
