[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
