[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.9",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.6",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.12.10",
]

[tool.uv.workspace]
members = ["bot"]
